Issue #22733: MSVC ffi_prep_args doesn't handle 64-bit arguments properly